// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionState.vue > Should handle pagination 1`] = `
"<div data-v-5cb94629="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div data-v-5cb94629="" class="v-card-text">
    <div data-v-5cb94629="">
      <div data-v-5cb94629="">
        <tokens-balance-diff-stub data-v-5cb94629="" balancechanges="[object Object],[object Object]" blocknumber="123456" itemsperpage="10"></tokens-balance-diff-stub>
      </div>
      <div data-v-5cb94629="" class="d-flex justify-center mt-4">
        <nav data-v-5cb94629="" class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
          <ul class="v-pagination__list">
            <!---->
            <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" aria-label="Previous page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 1"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">1</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item v-pagination__item--is-active" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="true" aria-label="Page 2, Current page"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">2</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">3</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`TransactionState.vue > Should show balance changes 1`] = `
"<div data-v-5cb94629="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div data-v-5cb94629="" class="v-card-text">
    <div data-v-5cb94629="">
      <div data-v-5cb94629="">
        <tokens-balance-diff-stub data-v-5cb94629="" balancechanges="[object Object],[object Object]" blocknumber="123456" itemsperpage="10"></tokens-balance-diff-stub>
      </div>
      <div data-v-5cb94629="" class="d-flex justify-center mt-4">
        <nav data-v-5cb94629="" class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
          <ul class="v-pagination__list">
            <!---->
            <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item v-pagination__item--is-active" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="true" aria-label="Page 1, Current page"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">1</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 2"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">2</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">3</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`TransactionState.vue > Should show loading state 1`] = `
"<div data-v-5cb94629="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div data-v-5cb94629="" class="v-card-text">
    <div data-v-5cb94629="" class="d-flex justify-center align-center pa-4">
      <div data-v-5cb94629="" class="v-progress-circular v-progress-circular--indeterminate v-theme--light v-progress-circular--size-default text-primary" role="progressbar" aria-valuemin="0" aria-valuemax="100"><svg style="transform: rotate(calc(-90deg + 0deg));" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45.714285714285715 45.714285714285715">
          <circle class="v-progress-circular__underlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="0"></circle>
          <circle class="v-progress-circular__overlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="125.66370614359172px"></circle>
        </svg>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`TransactionState.vue > Should show no balance changes message 1`] = `
"<div data-v-5cb94629="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div data-v-5cb94629="" class="v-card-text">
    <div data-v-5cb94629="">
      <div data-v-5cb94629="">
        <div data-v-5cb94629="" class="text-center pa-4"><i data-v-5cb94629="" class="mdi-swap-horizontal-off mdi v-icon notranslate v-theme--light text-grey-lighten-1 mb-2" style="font-size: 24px; height: 24px; width: 24px;" aria-hidden="true"></i>
          <div data-v-5cb94629="" class="text-body-2 text-grey-darken-1">No balance changes found for this transaction</div>
        </div>
      </div>
      <div data-v-5cb94629="" class="d-flex justify-center mt-4">
        <nav data-v-5cb94629="" class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
          <ul class="v-pagination__list">
            <!---->
            <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item v-pagination__item--is-active" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="true" aria-label="Page 1, Current page"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">1</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 2"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">2</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">3</span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;
